feat: 📝 rework documentation, add OpenApi visualisations
